2.AKS/GitOps/harbor/harbor-1.6.1/harbor-harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    meta.helm.sh/release-name: harbor
    meta.helm.sh/release-namespace: cicd
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: harbor
    app.kubernetes.io/managed-by: Helm
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-harbor-ingress
  namespace: cicd
spec:
  rules:
  - host: registry.nodespringboot.org
    http:
      paths:
      - backend:
          service:
            name: harbor-harbor-portal
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: harbor-harbor-core
            port:
              number: 80
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: harbor-harbor-core
            port:
              number: 80
        path: /service
        pathType: Prefix
      - backend:
          service:
            name: harbor-harbor-core
            port:
              number: 80
        path: /v2
        pathType: Prefix
      - backend:
          service:
            name: harbor-harbor-core
            port:
              number: 80
        path: /chartrepo
        pathType: Prefix
      - backend:
          service:
            name: harbor-harbor-core
            port:
              number: 80
        path: /c
        pathType: Prefix
  # tls:
  # - hosts:
  #   - harbor.nodespringboot.org
  #   secretName: harbor-harbor-ingress
